# POC-for-Semantisk-GraphQL

./: .pre-commit-config.yaml  Caddyfile  Dockerfile  README.md  context.json  docker-compose.yml  pyproject.toml
digstsgql/: app.py  config.py  data.py  database.py  dataloaders.py  db.py  jsonld.py  models.py  playground.py  schema.py
examples/: schema.graphql
